<resources>
    <string name="app_name">Joker Gym</string>
    <string name="Button_1">Monday</string>
    <string name="button_2">Tuesday</string>
    <string name="button_3">Wednesday</string>
    <string name="button_4">Thursday</string>
    <string name="button_5">Friday</string>
    <string name="button_6">Saturday</string>
    <string name="button_7">Sunday</string>
    <string name="first_week">First Week</string>
    <string name="the_program">The Program</string>
    <string name="second_week">Second Week</string>
    <string name="imageee" translatable="false">TODO</string>
    <string name="send">Send</string>
    <string name="email" translatable="false">rookmard@gmail.com</string>
    <string name="rr">Send</string>
    <string name="q">Send</string>
    <string name="massage_send">Do you want to send the message to us?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_button_label">send</string>
    <string name="sign_out">Sign Out</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7856542270150897/1867815595</string>
    <string name="the_developer">The Developer</string>
    <string name="abdulkrem_davud">Abdulkrem Davud</string>
    <string name="todosqs" translatable="false">TODO</string>
    <string name="fullow_me">Fullow Me!</string>
    <string name="Close">Close</string>
    <string name="ui_ux_designer"><![CDATA[UI & UX Designer]]></string>
    <string name="adil_seyho">Adil Seyho</string>
    <string name="welecome_back">"Welecome Back "</string>
    <string name="todo11" translatable="false">TODO</string>
    <string name="tt" translatable="false">TODO</string>

</resources>