<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body1"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="407dp"
        android:layout_height="629dp"
        android:layout_marginTop="4dp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center_horizontal"
                android:text="@string/first_week"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week1_botton"
                android:layout_width="match_parent"
                android:fontFamily="@font/bungee_inline"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/cornes"
                android:text="@string/Button_1"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week2_botton"
                android:layout_width="match_parent"
                android:fontFamily="@font/bungee_inline"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/cornes"
                android:text="@string/button_2"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week3_botton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:background="@drawable/cornes"
                android:text="@string/button_3"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week4_botton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:background="@drawable/cornes"
                android:text="@string/button_4"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week5_botton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:background="@drawable/cornes"
                android:text="@string/button_5"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week6_botton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:background="@drawable/cornes"
                android:text="@string/button_6"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />

            <Button
                android:id="@+id/week7_botton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/bungee_inline"
                android:background="@drawable/cornes"
                android:text="@string/button_7"
                android:textColor="@color/white"
                android:textSize="@dimen/first_week_string"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>