<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/cornes_dialog"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="14dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:contentDescription="@string/todosqs"
            app:srcCompat="@drawable/adilll" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ui_ux_designer"
            android:fontFamily="@font/bungee_inline"
            android:textColor="@color/bottons"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/adil_seyho"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebook_adil"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/facebook"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/insta_adil"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/insta"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/insta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Close" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>