<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rootgym"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SecondWeek"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/cornes"
        android:text="@string/second_week"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstWeek" />

    <Button
        android:id="@+id/firstWeek"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cornes"
        android:text="@string/first_week"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center_horizontal"
        android:text="@string/the_program"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/meImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/cornes"
        android:contentDescription="@string/todo11"
        android:elevation="20sp"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.941"
        ads:layout_constraintStart_toEndOf="@+id/meImage2"
        ads:layout_constraintTop_toBottomOf="@+id/SecondWeek"
        ads:layout_constraintVertical_bias="0.944"
        app:srcCompat="@drawable/help_outline" />

    <ImageButton
        android:id="@+id/meImage2"
        android:layout_width="59dp"
        android:layout_height="57dp"

        android:layout_marginBottom="16dp"
        android:background="@drawable/cornes"

        android:contentDescription="TODO"
        android:elevation="7dp"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.045"
        ads:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fui_ic_mail_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>